<resources>
    <string name="app_name">KunstApp</string>

    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Antall valgte bilder: %d</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="order_details">Quantity: %1$s \nFlavor: %2$s \nPickup date: %3$s \nTotal: %4$s \n\nThank you!</string>
    <string name="back_button">Back</string>
    <string name="summary">Bestill</string>
    <plurals name="cupcakes">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>
    <string name="artist">Kunstner</string>
    <string name="category">Kategori</string>
    <string name="choose_option">Velg bilde basert på</string>
    <string name="order">Min Handlekurv</string>

    <string name="artists">Kunstnere</string>
    <string name="categories">Kategorier</string>
    <string name="photos">Bilder</string>


    <string name="artist_name_ola">Ola Nordmann</string>
    <string name="artist_name_kari">Kari Nordmann</string>
    <string name="artist_name_jens">Jens Stoltenberg</string>
    <string name="artist_name_jonas">Jonas Gal Større</string>
    <string name="artist_name_arnold">Arnold Schwarzenegger</string>
    <string name="artist_name_anna">Anna</string>
    <string name="artist_name_peter">Peter</string>
    <string name="artist_name_john">John</string>
    <string name="artist_name_emily">Emily</string>
    <string name="artist_name_david">David</string>
    <string name="artist_name_sarah">Sarah</string>
    <string name="artist_name_michael">Michael</string>
    <string name="artist_name_lisa">Lisa</string>

    <string name="skyscraper">Høyhus</string>
    <string name="skyline">Skyline</string>
    <string name="grass">Gresseng</string>
    <string name="photo1_title">City View</string>
    <string name="photo2_title">Urban Landscape</string>
    <string name="photo3_title">Downtown Reflections</string>
    <string name="photo4_title">Metropolis</string>
    <string name="photo5_title">Highrise Sunset</string>
    <string name="photo6_title">Cityscape at Night</string>
    <string name="photo7_title">Tower Heights</string>
    <string name="photo8_title">Skyline Panorama</string>
    <string name="photo9_title">Urban Symmetry</string>
    <string name="photo10_title">Elevated Perspective</string>

    <string name="cupcake">Muffins</string>
    <string name="donut">Donut</string>
    <string name="gingerbread">Gingerbread Cookie</string>
    <string name="honeycomb">Honeycomb</string>
    <string name="ice_cream_sandwich">Ice Cream Sandwich</string>
    <string name="jellybean">Jellybean</string>
    <string name="kitkat">KitKat</string>
    <string name="lollipop">Lollipop</string>
    <string name="frozen_yogurt">Frozen Yogurt</string>
    <string name="marshmallow">Marshmallow</string>
    <string name="nougat">Nougat</string>
    <string name="oreo">Oreo Cookie</string>


    <string name="calculated_price">Beregnet pris: %skr</string>
    <string name="price_with_frame">Pris(inkl. ramme): %skr</string>
    <string name="frame_choice">Rammevalg</string>
    <string name="photo_details">Bildedetaljer:</string>
    <string name="put_in_shopping_cart">Legg i handlekurv</string>
    <string name="home">Hjem</string>
    <string name="metal_frame">Metal</string>
    <string name="wood_frame">Tre</string>
    <string name="plastic_frame">Plast</string>
    <string name="artist_name">Kunstner: %s</string>
    <string name="no_frame">Ingen</string>
    <string name="checkout">Betalling</string>
    <string name="go_to_checkout">Gå til betaling</string>
    <string name="delete">Slett</string>
    <string name="frame">Ramme: %s</string>
    <string name="frame_title">Ramme:</string>
    <string name="artist_name_superman">Superman</string>
    <string name="nature">Natur</string>
    <string name="food">Mat</string>
    <string name="architecture">Arkitektur</string>
    <string name="sport">Sport</string>
    <string name="misc">Diverse</string>
    <string name="Buildings">Bygninger</string>
    <string name="total_photos">Antall bilder: %d</string>
    <string name="most_expensive_photo">Dyreste bilde: %s</string>
    <string name="most_popular_photo">Mest populære bilde: %s</string>
    <string name="photo_small">Lite</string>
    <string name="photo_medium">Middels</string>
    <string name="photo_large">Stort</string>
    <string name="photo_huge">Enormt</string>
    <string name="price">Pris: %.2fkr</string>
    <string name="frame_width">Ramme Bredde:</string>
    <string name="width">%sdp</string>
    <string name="size_title">Størrelse:</string>
    <string name="no_width">Ingen bredde</string>
    <string name="small_width">Lite bredde</string>
    <string name="medium_width">Medium bredde</string>
    <string name="large_width">Stor bredde</string>
    <string name="total_price_with_mva">Totalpris inkl. mva: %.2fkr</string>
    <string name="photo_choosen">Valgt bilde</string>
    <string name="size">Størrelse: %s</string>
    <string name="frame_color">Ramme farge</string>
    <string name="payment_option">Betalingsvalg:</string>
    <string name="pay">Betal</string>
    <string name="confirm">Bekreft</string>
    <string name="dismiss">Avbryt</string>
    <string name="ok">Ok</string>
    <string name="dialog_title">Tusen takk!</string>
    <string name="dialog_text">Din betaling er mottatt og lagt til forfall. Takk for handelen.</string>
    <string name="credit_card">Kortnr: 9999.1122333</string>
    <string name="credit_card_expiration">Utløpsmåned: 06.27</string>
    <string name="credit_card_security_code">Tresifret nr: 123</string>


</resources>